<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.geekbrains.weatherapp.Main2Activity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="0dp"
       android:layout_marginTop="0dp"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:text="@string/date"
           android:layout_marginBottom="@dimen/height"/>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/disp_margin">
           <TextView
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/in_city"/>
           <TextView
               android:id="@+id/city"
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="text"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/disp_margin">
           <TextView
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/airTemp"/>
           <TextView
               android:id="@+id/temp_air"
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="air"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/disp_margin">
           <TextView
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/waterTemp"/>
           <TextView
               android:id="@+id/temp_water"
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="water"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/disp_margin">
           <TextView
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/pressure"/>
           <TextView
               android:id="@+id/press_value"
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="pressure"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/disp_margin">
           <TextView
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/wind"/>
           <TextView
               android:id="@+id/speed_of_wind"
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="wind"/>
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/wet"/>
           <TextView
               android:id="@+id/value_wet"
               android:layout_width="@dimen/width"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="wet"/>
       </LinearLayout>

   </LinearLayout>


</android.support.constraint.ConstraintLayout>
